# NNCL

./: .gitignore  .stignore  install.sh  pyproject.toml
.claude/: settings.local.json
.stfolder/: syncthing-folder-3a14d3.txt
lightning_logs/version_0/: hparams.yaml  metrics.csv
lightning_logs/version_1/: hparams.yaml  metrics.csv
lightning_logs/version_3/: args.json  hparams.yaml  metrics.csv
src/: args.py  logger.py  main.py  plot_metrics.py
